# catdex

./: .gitignore  Cargo.toml
src/: main.rs
static/: index.html
static/css/: index.css
