[package]
name = "catdex"
version = "0.1.0"
authors = ["Daigo Shitara <stain.witness+github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
handlebars = { version = "4.1.0", features = ["dir_source"] }
serde_json = "1.0.64"
